--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ a:focus {
   border-bottom: 0.3rem solid;
 }
 
+.social-link:hover {
+  border-bottom: none;
+}
+
 /* Home Section */
 .title-group {
   text-align: center;
@@ -197,10 +201,12 @@ p {
   margin-right: 5rem;
   cursor: pointer;
   color: var(--secondary-color);
+  transition: all 0.2s linear;
 }
 
 .fab:hover {
   color: var(--on-background);
+  transform: scale(1.12);
 }
 
 /* Dark Mode Toggle */
